Fix display issue on safari

--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,12 @@
 
 body {
   display:flex;
-  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";  height: 100vh;
+  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";  
+  height: 100vh;
 }
 
 #side-cover {
-  height: 100%;
+  height: 100vh;
 }
 
 .container {
